--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,37 @@ header
     left: 10px;
 }
 
+  
+  #list {
+    display: none;
+    position: absolute;
+    top: 70px;
+    left: 540px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+  #list .dropdown-item {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  #list .dropdown-item:hover {
+    background-color: #f1f1f1;
+  }
+  
+  
+  #list.visible {
+  display: block;
+}
+
+
+  
+
 
 
 
