--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,14 @@ header
     color: chocolate;
     padding-right: 5px;
 }
-.nav{
+.navbar{
     display: flex;
     column-gap: 45px;
     z-index: 1000;
     
 
 }
-.nav a
+.navbar a
 {
     font-size: 1rem;
     padding: .25rem 1rem;
@@ -62,7 +62,7 @@ header
     border-right: 2px solid #ee00ffe8;
     height: 30px;
 }
-.nav :hover
+.navbar :hover
 {
     background-color: #ee00ffe8;
     border-radius: 5px;
