--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,6 @@ header
     display: flex;
     column-gap: 45px;
     z-index: 1000;
-    
-
 }
 .navbar a
 {
@@ -155,12 +153,17 @@ header
     left: 10px;
 }
 
-  
+  .menu-icon
+  {
+   position: relative;
+   top: 1px;
+  }
   #list {
     display: none;
     position: absolute;
     top: 70px;
-    left: 540px;
+    left: 615px;
+    
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -168,6 +171,7 @@ header
   }
   
   #list .dropdown-item {
+    
     color: black;
     padding: 12px 16px;
     text-decoration: none;
