--- a/styles.css
+++ b/styles.css
@@ -49,11 +49,12 @@ body{
     font-size: 1.7rem;
     font-weight: 600;
     column-gap: 0.5rem;
+    color: #d5d5d5e8;
 }
 .logo .bx
 {
     font-size: 35px;
-    color: var(--orange-color);
+    color: #ee00ffe8;
 }
 .navbar
 {
@@ -96,12 +97,14 @@ body{
     top: 220px;
     left: 200px;
 }
+.swiper-wrapper
+{
+    padding-top: 20px;
+}
 .home-text h1
 {
     font-size: 30px;
-    background: linear-gradient(90deg,#110c0c  ,#ff9640 10% );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #ee00ffe8;
 }
 .home-text span
 {
@@ -112,13 +115,14 @@ body{
  .btn{
     font-size: 20px;
     padding: 1rem 0.5rem;
-    background-color: aquamarine;
+    background-color: #ee00ffe8;
     width: 150px;
     border-radius: 30px;
     margin-top: 10px;
     color: white;
 
 }
+
 .btn .bx
 {
     background-color: white;
@@ -159,97 +163,153 @@ body{
   #list.visible {
   display: block;
 }
-
-.coustomers
+.products
 {
+    padding-top: 30px;
     max-width: 968px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;   
 }
-.coustomers-container
+.products-container
 {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(280px,auto));
+    grid-template-columns: repeat(auto-fit,minmax(260px,auto));
     gap: 1.5rem;
     margin-top: 2rem;
 }
-.coustomers h2
+.products-container .box{
+    padding: 20px;
+    box-shadow: 1px 2px 11px 4px rgba(37, 48, 47, 0.15);
+    border-radius: 0.5rem;
+    position: relative;
+}
+.products-container .box img{
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
+    object-position: center;
+    position: relative;
+
+}
+.products-container .box span{
+    font-size: 13px;
+    font-weight: 500;
+    color: white;
+}
+.products-container .box h2{
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: white;
+}
+.bt
 {
+    color: #4bbcf1e8;
+    font-size: 30px;
+}
+.products-container .box .price
+{
+    font-size: 1rem;
+font-weight: 600;
+    margin-top: 0.5rem;
+    color: #ee00ffe8;
+}
+.products-container .box .price span{
+    color: var(--text-color);
+}
+.products-container .box .bx-cart-alt
+{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 10px;
+    background: var(--green-color);
+    color: var(--bg-color);
+    font-size: 20px;
+    border-radius: 0.5rem 0 0.5rem 0;
+    cursor: pointer;
+}
+.products-container .box .bx-cart-alt:hover
+{
+    background-color: #ee00ffe8;
+}
+.products-container .box .bx-heart
+{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 20px;
+    color: #ee00ffe8;
+}
+.products-container .box .discount
+{
+    position: absolute;
+    top: 1rem;
+    left: 0rem;
+    color: var(--bg-color);
+    padding: 4px 18px;
+    background: #ee00ffe8;
+    clip-path: polygon(100% 0%, 75% 50%,100% 100%,0 100%,0% 50%,0 0);
+}
+.customers {
+    max-width: 968px;
+    margin: 2rem auto;
     text-align: center;
+}
+
+.customers-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 1.5rem;
+}
+
+.customers h2 {
     font-size: 1.6rem;
     font-weight: 600;
+    margin-bottom: 2rem;
 }
-.coustomers-container .box
-{
+
+.customers-container .box {
     padding: 20px;
-    box-shadow: 1px 2px 11px 4px rgba(159, 255, 255, 0.15);
+    box-shadow: 1px 2px 11px rgba(159, 255, 255, 0.15);
     border-radius: 0.5rem;
-    border-bottom: 7px solid  rgb(130, 130, 190);;
+    background-color: black;
+    transition: transform 0.3s;
 }
-.coustomers-container :hover{
-    transform: translateY(10px);
-    transition: 0.5s ;
+
+.customers-container .box:hover {
+    transform: translateY(-5px);
 }
-.coustomers-container .box :hover
-{
-    transform: none;
-}
- .stars 
-{
+
+.stars {
     font-size: 24px;
-    background: linear-gradient(150deg,#ffa2a2  ,#231102 50% );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;  
-} 
- .bxs-quote-alt-left
-{
+    color: #ee00ffe8;
+}
+
+.bxs-quote-alt-left {
     font-size: 24px;
     color: rgb(177, 177, 239);
 }
-.coustomers-container.box p
-{
-    font-size: .938rem;
-}
-.review-profile
-{
-    display: flex;
-    align-items: center;
-    margin-top: 1rem;
-    column-gap: .5rem;
-}
-.review-profile img{
-    width: 60px;
-   height: 60px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-    margin-bottom: -15px;
-}
-.review-profile1
-{
-    display: flex;
-    align-items: center;
-    margin-top: 1rem;
-    column-gap: .5rem;
-}
-.review-profile1 img{
-    width: 60px;
-   height: 60px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-}
-.name{
-    margin-bottom: -25px;
-}
-.photo
-{
-   margin-top: 15px;
-}
-.box p
-{
+
+.box p {
+    font-size: 0.938rem;
     color: white;
+    margin: 10px 0;
 }
+
+.review-profile {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+    column-gap: 0.5rem;
+}
+
+.review-profile img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 .social
 {
     margin-left: -17px;
