--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
     text-decoration: none;
     scroll-padding-top:2rem ;
     scroll-behavior: smooth;
-    z-index: -1;
 }
 :root
 {
@@ -133,36 +132,6 @@ body{
     left: 10px;
 }
 
-
-
- 
-  #list {
-    display: none;
-    position: absolute;
-    top: 70px;
-    left: 615px;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-  
-  #list .dropdown-item {
-    
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  #list .dropdown-item:hover {
-    background-color: #f1f1f1;
-  }
-  
-  
-  #list.visible {
-  display: block;
-}
 .products
 {
     padding-top: 30px;
@@ -273,13 +242,7 @@ font-weight: 600;
     box-shadow: 1px 2px 11px rgba(159, 255, 255, 0.15);
     border-radius: 0.5rem;
     background-color: black;
-    transition: transform 0.3s;
 }
-
-.customers-container .box:hover {
-    transform: translateY(-5px);
-}
-
 .stars {
     font-size: 24px;
     color: #ee00ffe8;
@@ -309,7 +272,6 @@ font-weight: 600;
     border-radius: 50%;
     object-fit: cover;
 }
-
 .social
 {
     margin-left: -17px;
@@ -318,18 +280,20 @@ font-weight: 600;
     column-gap: 7px;
     width:130px ;
     align-items: center;
+    cursor: pointer;
 }
 .social .bx
 {
     padding: 10px;
     background: var(--bg-color);
-    color: var(--green-color);
+    color: #c500cfe8;
     border-radius: 5rem;
     font-size: 17px;
+    cursor: pointer;
 }
 .social .bx:hover
 {
-    background: var(--green-color);
+    background: #c500cfe8;
     color: var(--bg-color);
     transition: 0.2s all linear;
 }
@@ -351,6 +315,7 @@ font-weight: 600;
 {
     font-size: 0.938rem;
     margin: 0.5rem 0 1rem;
+    color: #868a92;
 }
 .footer
 {
@@ -369,15 +334,12 @@ font-weight: 600;
     font-size: 1.1rem;
     font-weight: 600;
     margin-bottom:1rem;
+    color: #868a92;
 }
 .footer-box a
 {
     color: #868a92;
     margin-bottom: 1rem;
-}
-.Mobiles
-{
-    padding-left: 70px;
 }
 .footer-box a:hover
 {
@@ -404,7 +366,7 @@ font-weight: 600;
 }
 .footer-box form .bxs-envelope
 {
-    color: var(--green-color);
+    color: #c500cfe8;
 }
 .copyright
 {
@@ -415,7 +377,9 @@ font-weight: 600;
 {
     box-shadow: 1px 2px 11px 4px rgba(34, 131, 131, 0.15);
 }
-
+input[type="email"] {
+    color: white; 
+}
 
 
 
