--- a/styles_gadget.css
+++ b/styles_gadget.css
@@ -224,14 +224,14 @@ font-weight: 600;
 
 .heading  h1
 {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  border-radius: 200px;
   padding-left: 5px;
   margin-top: 50px;
   margin-bottom: 20px;
   color: aquamarine;
   font-size: 30px;
-  box-shadow: 1px 2px 11px 4px rgba(2, 116, 182, 0.311);
   width: 300px;
 
 }
