--- a/styles.css
+++ b/styles.css
@@ -380,9 +380,18 @@ font-weight: 600;
 input[type="email"] {
     color: white; 
 }
+@keyframes fadeIn {
+    from {
+      opacity: .05; 
+    }
+    to {
+      opacity: 1; 
+    }
+  }
 
-
-
+  .swiper-wrapper img {
+    animation: fadeIn 4s forwards; 
+  }
 
 
 
